--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -3,6 +3,8 @@ title: Getting Started
 description: Installation and first steps with NZOTH.
 ---
 
+import CodeFile from '../../components/CodeFile.astro'
+
 # Getting Started
 
 This section guides you through installing NZOTH, adding it to a NestJS project, and creating your first typed controller.
@@ -17,51 +19,25 @@ pnpm add @lonestone/nzoth
 
 ## Quick example
 
-Declare a Zod schema and a controller using NZOTH’s typed decorators.
+Declare a Zod schema and a controller using NZOTH's typed decorators.
+
+Generate an OpenAPI document from your NestJS app and NZOTH decorators, enabling easy API documentation.
+Add zod validations to globals filters.
+
+[main.ts](https://github.com/lonestone/nzoth/blob/main/examples/nest-basic/src/main.ts)
+<CodeFile file="../examples/nest-basic/src/main.ts" lang="ts" />
 
 Defines a Zod schema for a user object, specifying that a user has a UUID `id` and a valid email address.
 
-```ts
-// user.schema.ts
-import { z } from 'zod'
-
-export const UserSchema = z.object({
-  id: z.string().uuid(),
-  email: z.string().email(),
-}).meta({
-    title: "User",
-    description: "A basic user"
-})
-```
+[modules/post/post.contract.ts](https://github.com/lonestone/nzoth/blob/main/examples/nest-basic/src/modules/post/post.contract.ts)
+<CodeFile file="../examples/nest-basic/src/modules/post/post.contract.ts" lang="ts" />
 
 Use the `TypedRoute` decorator with schema to add validation and type-safe
 
-```ts
-// user.controller.ts
-import { Controller } from '@nestjs/common'
-import { TypedRoute } from '@lonestone/nzoth/server'
-import { UserSchema } from './user.schema'
+[modules/post/post.controller.ts](https://github.com/lonestone/nzoth/blob/main/examples/nest-basic/src/modules/post/post.controller.ts)
+<CodeFile file="../examples/nest-basic/src/modules/post/post.controller.ts" lang="ts" />
 
-@Controller('users')
-export class UserController {
-  @TypedRoute.Get({ response: UserSchema })
-  getMe() {
-    return { id: 'uuid', email: 'john@doe.tld' }
-  }
-}
-```
 
-Generate an OpenAPI document from your NestJS app and NZOTH decorators, enabling easy API documentation
-
-```ts
-// main.ts
-
-const document = createOpenApiDocument(app, swaggerConfig)
-
-SwaggerModule.setup('docs', app, document, {})
-```
-
-Move on to the "Core" pages to learn about validation, filtering, pagination, sorting, and OpenAPI export.
 
 
 
